# todo-app

./: .gitmodules
backend/: .dockerignore  README.md  pyproject.toml
backend/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  init_alias.sh
backend/api/: auth.py  db.py  main.py  migrate_db.py
backend/api/cruds/: category.py  task.py
backend/api/models/: category.py  task.py
backend/api/routers/: category.py  done.py  task.py
backend/api/schemas/: task.py
frontend/: README.md  package-lock.json  package.json
frontend/.devcontainer/: Dockerfile  devcontainer.json
frontend/app/: Provider.tsx  layout.tsx  page.tsx
frontend/app/api/tasks/: route.ts
frontend/app/api/tasks/[task_id]/: route.ts
frontend/app/test/: page.tsx
frontend/components/: AddTask.tsx  DeleteTask.tsx  UpdateTask.tsx  tasks.tsx  type.ts
frontend/todo-app/: api.ts  package-lock.json  package.json  types.ts
frontend/todo-app/app/: AddTask.tsx  Provider.tsx  TodoList.tsx  TodoListItem.tsx  layout.tsx  navbar.jsx  page.tsx  types.ts
frontend/todo-app/app/[components]/: DeleteTask.tsx  TaskList.tsx
frontend/todo-app/app/data/: todos.json
frontend/todo-app/app/user/login/: page.jsx
frontend/todo-app/app/user/signup/: page.jsx
