[tool.poetry]
name = "demo-app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "demo_app"}]

[tool.poetry.dependencies]
python = "^3.10.12"
fastapi = "^0.100.1"
uvicorn = {extras = ["standard"], version = "^0.23.1"}
sqlalchemy = "^2.0.19"
asyncpg = "^0.28.0"
psycopg2-binary = "^2.9.6"


[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.21.1"
aiosqlite = "^0.19.0"
httpx = "^0.24.1"
pytest-watch = "^4.2.0"
uvloop = { version = "^0.16.0", platform = "linux" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
